[tool.poetry]
name = "glue"
version = "0.1.0"
description = ""
authors = ["Edwin Kofler <edwin@kofler.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.1.2"
mkdocs-bootstrap386 = "^0.0.2"
mkdocs-bootswatch = "^1.1"
mkdocs-material = "^7.1.5"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"
mike = "^1.0.0"
mkdocs-mermaid2-plugin = "^0.5.1"
mkdocs-macros-plugin = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
